# mcp-notmuch-sendmail

./: .gitignore  Makefile  README.md  VERSION.txt  cli.py  core.py  email_example.md  email_template.j2  latex.css  notmuch.py  notmuchlib.py  pyproject.toml  sendmail.py  server.py
mcp_notmuch_sendmail/: __init__.py  core.py  email_template.j2  email_template_draft.j2  notmuchlib.py  sendmail.py  server.py
